Test/typing/should_fail/methods_type_no_return.java
package tutu.titi.toto;

class A {

    private int myMethod(){
        int a = 2;
    }

}